<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="co.covid19.diagnosis.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_protocols"
        android:name="co.covid19.diagnosis.ui.protocols.ProtocolsFragment"
        android:label="@string/title_protocols"
        tools:layout="@layout/fragment_protocols" />

    <fragment
        android:id="@+id/navigation_contact"
        android:name="co.covid19.diagnosis.ui.contact.ContactFragment"
        android:label="@string/title_contact"
        tools:layout="@layout/fragment_contact" />
</navigation>